# mipt2025s-4-konev-s-a

./: CMakeLists.txt  README.md
.cache/clangd/index/: distribution_params.cpp.191A1466D386817A.idx  samples_generator.cpp.A977ED3DD4575F72.idx  semcv.hpp.F5FEBEB24E775A68.idx  semcv_task01.cpp.2BC6C3BA6F9EB660.idx  semcv_task02.cpp.4BA09CDC5E000947.idx  semcv_task03.cpp.6988F63FC07957A8.idx  (+12 more)
semcv/: CMakeLists.txt  semcv.hpp  semcv_task01.cpp  semcv_task02.cpp  semcv_task03.cpp  semcv_task04.cpp  semcv_task05.cpp  semcv_task06.cpp
task01/: CMakeLists.txt  README.md  samples_generator.cpp  task01.cpp
task01/samples/: 0012x0017.4.real32.tiff  0017x0013.1.uint16.tiff  0017x0071.3.uint08.tiff  0020x0088.4.real64.tiff  0025x0064.4.sint08.tiff  0042x0076.3.sint08.tiff  0051x0061.1.real64.tiff  0054x0078.1.sint16.tiff  0055x0073.3.sint32.tiff  0058x0096.3.uint16.tiff  0067x0096.1.sint32.tiff  0069x0039.4.sint16.tiff  0073x0093.3.real64.tiff  0079x0064.1.real32.tiff  0081x0024.4.sint32.tiff  0086x0053.4.uint16.tiff  0087x0067.3.real32.tiff  0087x0083.4.uint08.tiff  0088x0056.1.uint08.tiff  0089x0058.3.sint16.tiff  0092x0080.1.sint08.tiff  task01.lst
task02/: CMakeLists.txt  README.md  distribution_params.cpp  task02.cpp
task03/: CMakeLists.txt  README.md  task03.cpp  test_contrast.cpp
task04/: CMakeLists.txt  README.md  run_detector.sh  run_generator.sh  task04_01.cpp  task04_02.cpp  task04_03.cpp
task04/data/: 10_pred.txt  11_pred.txt  11_truth.txt  12_pred.txt  12_truth.txt  13_pred.txt  13_truth.txt  14_pred.txt  14_truth.txt  15_pred.txt  16_pred.txt  17_pred.txt  17_truth.txt  18_pred.txt  18_truth.txt  19_pred.txt  19_truth.txt  1_pred.txt  20_pred.txt  21_pred.txt  21_truth.txt  22_pred.txt  22_truth.txt  23_pred.txt  24_pred.txt  25_pred.txt  25_truth.txt  26_pred.txt  27_pred.txt  27_truth.txt  28_pred.txt  28_truth.txt  29_pred.txt  2_pred.txt  2_truth.txt  30_pred.txt  30_truth.txt  31_pred.txt  31_truth.txt  32_pred.txt  (+25 more)
task05/: CMakeLists.txt  README.md  task05.cpp
task06/: CMakeLists.txt  README.md  run_detector.sh  task06.cpp
task06/data/: 10_pred.txt  10_truth.txt  11_pred.txt  12_pred.txt  13_pred.txt  14_pred.txt  15_pred.txt  15_truth.txt  16_pred.txt  16_truth.txt  17_pred.txt  18_pred.txt  19_pred.txt  1_pred.txt  1_truth.txt  20_pred.txt  20_truth.txt  21_pred.txt  22_pred.txt  23_pred.txt  23_truth.txt  24_pred.txt  24_truth.txt  25_pred.txt  26_pred.txt  26_truth.txt  27_pred.txt  28_pred.txt  29_pred.txt  29_truth.txt  2_pred.txt  30_pred.txt  31_pred.txt  32_pred.txt  33_pred.txt  33_truth.txt  34_pred.txt  34_truth.txt  35_pred.txt  35_truth.txt  (+25 more)
